--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="florida">
-                <h2>Florida</h2>
+            <div class="destination" id="bugaboos">
+                <h2>Bugaboos</h2>
             </div>
 
-            <div class="destination" id="paris">
-                <h2>Paris</h2>
+            <div class="destination" id="fontainbleau">
+                <h2>Fontainbleau</h2>
+            </div>
+            <div class="destination" id="yosemite">
+                <h2>Yosemite</h2>
+            </div>
+            <div class="destination" id="hampi">
+                <h2>Hampi</h2>
             </div>
         </div>
     </div>
