Added links to UKC without styling

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="bugaboos">
-                <h2>Bugaboos</h2>
+                <a class="nostyle" href=https://www.ukclimbing.com/logbook/crags/the_bugaboos-4178> <h2>Bugaboos</h2></a>
             </div>
 
             <div class="destination" id="fontainbleau">
-                <h2>Fontainbleau</h2>
+               <a class="nostyle" href=https://www.ukclimbing.com/logbook/crags/bas_cuvier-1652> <h2>Fontainbleau</h2></a>
             </div>
             <div class="destination" id="yosemite">
-                <h2>Yosemite</h2>
+               <a class="nostyle" href=https://www.ukclimbing.com/logbook/crags/el_capitan-8023> <h2>Yosemite</h2></a>
             </div>
             <div class="destination" id="hampi">
-                <h2>Hampi</h2>
+                <a class="nostyle" href=https://www.ukclimbing.com/logbook/crags/hampi-20570><h2>Hampi</h2></a>
             </div>
         </div>
     </div>
