--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class="destination" id="hampi">
                 <a class="nostyle" href=https://www.ukclimbing.com/logbook/crags/hampi-20570><h2>Hampi</h2></a>
             </div>
+            <div class="destination" id="stange">
+                <a class="nostyle" href=https://www.ukclimbing.com/logbook/crags/stanage_popular-104><h2>Stanage</h2></a>
+            </div>
         </div>
     </div>
 
